Final Details: Color Picker, Share Modal Fixes, Link Modal, Parallel Notes, etc

--- a/app/assets/sass/_dynamic_menus.sass
+++ b/app/assets/sass/_dynamic_menus.sass
@@ -272,3 +272,25 @@
 
 .dynamic_menu dl p
   margin-bottom: 15px
+
+.dynamic_menu .open_modal
+  text-decoration: none
+
+.dynamic_menu .open_modal dt
+  background: url(../images/icon_open_modal.png) no-repeat 95% center #1f1f1f
+
+.dynamic_menu .open_modal dt:hover
+  background: url(../images/icon_open_modal.png) no-repeat 95% center #2e2e2e
+
+#menu_bookmark header ul.reference_tokens
+  background: none
+
+#menu_bookmark header ul.reference_tokens > a 
+  border: none !important
+
+#menu_bookmark header span
+  font-weight: bold
+  margin: 0 0 5px 0 
+  display: block
+#menu_bookmark header .close
+  top: 15px
