--- a/app/assets/sass/_form_elements.sass
+++ b/app/assets/sass/_form_elements.sass
@@ -416,7 +416,19 @@ input[type="image"] + a
 input[type="date"]
   width: 100%
 
+// `Embedded Text Field
+//
 
+.text_field_embed
+  position: relative
+  display: block
+
+.text_field_embed button
+  position: absolute
+  right: 8px
+  top: 6px
+.text_field_embed + .text_field_embed 
+  margin: 10px 0
 .secret
   margin: 0
   display: none
