--- a/app/assets/sass/_reference_tokens.sass
+++ b/app/assets/sass/_reference_tokens.sass
@@ -35,7 +35,7 @@
 	background: transparent
 	background-image: none !important
 	box-shadow: 0px 0px 0px transparent !important
-.reference_tokens li
+.reference_tokens > li
 	float: left
 	list-style: none
 	margin: 
@@ -57,9 +57,28 @@
 			size: auto
 		border-radius: 15px
 		text-decoration: none
-.reference_tokens ul li a:hover
+.reference_tokens > li a:hover
 	+background-image(url(../images/close_reference_token.png), linear-gradient(#007cad, #00588f))
 	background:
 		repeat: no-repeat
 		position: right -23px, center center
 		size: auto
+
+#add_reference_token input
+	background: #767474 !important
+	display: none 
+#add_reference_token_helper
+	position: absolute
+	z-index: 4
+	width: 365px
+	border: 1px #3a3a3a solid
+	display: none
+
+#add_reference_token_helper li a
+	background: #3e3d3c
+	border-top: 1px #000 solid
+	border-bottom: 1px #4c4b4b solid !important
+
+.dynamic_menu header ul a
+	border-top: 0px
+	border-bottom: 0px
