--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,8 +15,12 @@
           = yield
           - if content_for? :main_trailer
             = yield :main_trailer
-        #sidebar
-          = render '/shared/sidebar'
+        - if content_for? :sidebar
+          #sidebar
+            = yield :sidebar
+        - else
+          - unless @sidebar == false
+            = render '/shared/sidebar'
       = render '/shared/footer'
     - if @reader_menus == true
       -# = render '/shared/menu_book_chapter'
