--- a/app/views/shared/_menu_bookmark.html.haml
+++ b/app/views/shared/_menu_bookmark.html.haml
@@ -1,10 +1,51 @@
 #menu_bookmark.dynamic_menu
+  %header
+    %a.close{:href => '#'} Close
+    %span
+      Currently Selected:
+    %ul.reference_tokens
+      %li
+        %a{:href => "#"}
+          Luke 2:15
+      %li
+        %a{:href => "#"}
+          John 4:25
+      %div#add_reference_token
+        %a{:href => '#'}
+          ADD
+        %input{:type => 'text'}
+        %ul#add_reference_token_helper
+          %li
+            %a{:href => '#'}
+              Genesis
+          %li
+            %a{:href => '#'}
+              Exodus
+          %li
+            %a{:href => '#'}
+              Leviticus
+          %li
+            %a{:href => '#'}
+              Numbers
   %span.menu_arrow
     &nbsp;
   %dl.accordion
     %dt
-      Bookmark
+      Highlight
       %a.close{:href => '#'} Close
+    %dd
+      %div{:class => "color_picker_list"}
+        %a{:class => "color_picker", :href =>"#"}
+        %a{:class => "color_picker_holder", :href =>"#"}
+        %a{:class => "color_picker_clear", :href =>"#"}
+          <span class='selected'></span>
+        %a{:class => "color", :href => "#", :style => "background-color:#f3a9a9"}
+        %a{:class => "color", :href => "#", :style => "background-color:#f6f0b4"}
+        %a{:class => "color", :href => "#", :style => "background-color:#a8ed9d"}
+        %a{:class => "color", :href => "#", :style => "background-color:#f3a9a9"}
+      %div{:class => "clear"}
+    %dt
+      Bookmark
     %dd
       %form{:action => user_bookmarks_path(current_auth.user_id), method: "POST"}
         %p
@@ -18,30 +59,28 @@
           %br
           %input{:type => 'text', :id => 'bookmark_labels', :name => 'bookmark[labels]'}
           %input{:class => "verses_selected_input", name: "bookmark[reference]", type: "hidden"}
+        %span
+          %b
+            Color
+          (optional) 
+        %div{:class => "color_picker_list"}
+          %a{:class => "color_picker", :href =>"#"}
+          %a{:class => "color_picker_holder", :href =>"#"}
+          %a{:class => "color_picker_clear", :href =>"#"}
+            <span class='selected'></span>
+          %a{:class => "color", :href => "#", :style => "background-color:#f3a9a9"}
+          %a{:class => "color", :href => "#", :style => "background-color:#f6f0b4"}
+          %a{:class => "color", :href => "#", :style => "background-color:#a8ed9d"}
+          %a{:class => "color", :href => "#", :style => "background-color:#f3a9a9"}
+        %div{:class => "clear"}
         %p
           %input{:type => 'image', :src => '/images/save_bookmark.png'}
-    %dt
-      Link
-    %dd
-      %p
-        Test
-    %dt
-      Highlight
-    %dd
-      %div{:class => "color_picker_list"}
-        %a{:class => "color_picker", :href =>"#"}
-        %a{:class => "color", :href => "#", :style => "background-color:#f3a9a9"}
-        %a{:class => "color", :href => "#", :style => "background-color:#f6f0b4"}
-        %a{:class => "color", :href => "#", :style => "background-color:#a8ed9d"}
-        %a{:class => "color", :href => "#", :style => "background-color:#f3a9a9"}
-        %a{:class => "color", :href => "#", :style => "background-color:#a8ece7"}
-      %a{:class => "remove_color", :href=> "#"}
-        Remove Color
-      %div{:class => "clear"}
-    %dt
-      Share
-    %dt
-      Link
+    %a.open_modal{:href => "#"}
+      %dt#open_share_modal
+        Share
+    %a.open_modal{:href => "#"}
+      %dt#open_share_modal_link
+        Link
     %dt
       New Note
     %dd
