--- a/app/views/plans/show_subscribed.html.haml
+++ b/app/views/plans/show_subscribed.html.haml
@@ -2,7 +2,16 @@
 - @sidebar = false
       
 %article
-  %h1= @subscription.name
+  %h3.float_left= @subscription.name
+  %dl.combo_button.float_right
+    %dt
+    %dd.highlighted
+      = link_to t("plans.day")
+    %dd
+      = link_to t("plans.settings"), plan_settings_path(@subscription)
+    %dd
+      = link_to t("plans.month"), plan_calendar_path(@subscription)
+      
   .split_pane{:style => "padding-top:15px"}
     - if @reading.devotional
       %p{style: "margin-left: 20px; margin-right: 20px;"}= @reading.devotional.html_safe
@@ -29,10 +38,13 @@
                   %input{type: "hidden", name: "content_target", value: i}
                 %input{type: "checkbox", onChange: "this.form.submit()", id: "#{i}_box",  checked: r.completed? ? "checked" : nil}
                 %label{for: "#{i}_box"}= r.ref.to_s
-
+      %br
+        .subscription_plan_links{style: "margin-left: 30px;"}
+          %p= link_to(t("plans.about the publisher"), @subscription.publisher_url)
+          %p= link_to(t("plans.about this plan"), ignore_subscription: true)
     .split_pane_content
       - if @reading.references
-        %p.embedded_reader{style: "margin-left: 30px;"}= @reading.references[@content_page].ref.contents(format: 'html').join.html_safe
+        .embedded_reader{style: "padding-left: 30px; padding-bottom: 30px;"}= @reading.references[@content_page].ref.contents(format: 'html').join.html_safe
         %form{method: 'post'}
           %input{type: "hidden", name: "_method", value: "put"}
           %input{type: "hidden", name: "ref", value: @reading.references[@content_page].ref.osis}
