--- a/app/views/plans/show_subscribed.html.haml
+++ b/app/views/plans/show_subscribed.html.haml
@@ -33,7 +33,7 @@
                 %input{type: "hidden", name: "_method", value: "put"}
                 %input{type: "hidden", name: "ref", value: r.ref.osis}
                 %input{type: "hidden", name: "completed", value: (!r.completed?).to_s}
-                %input{type: "hidden", name: "day", value: @day}
+                %input{type: "hidden", name: "day_target", value: @day.to_s}
                 - if i != 0
                   %input{type: "hidden", name: "content_target", value: i}
                 %input{type: "checkbox", onChange: "this.form.submit()", id: "#{i}_box",  checked: r.completed? ? "checked" : nil}
@@ -49,6 +49,6 @@
           %input{type: "hidden", name: "_method", value: "put"}
           %input{type: "hidden", name: "ref", value: @reading.references[@content_page].ref.osis}
           %input{type: "hidden", name: "completed", value: true.to_s}
-          %input{type: "hidden", name: "day_target", value: @day}
+          %input{type: "hidden", name: "day_target", value: @day.to_s}
           %input{type: "hidden", name: "content_target", value: @content_page + 1}
           %input.action_button_blue.float_right{type: "submit", name: "done_read", value: t('plans.mark reading complete')}
