--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,2 +1,4 @@
-
-= render 'create_form'
+%article
+  %h1= t("users.sign up for an account")
+  %p= link_to "Sign up with Facebook", auth_connect_path(:facebook, redirect: facebook_sign_up_path)
+  = render 'create_form'
