--- a/app/views/plans/show_subscribed.html.haml
+++ b/app/views/plans/show_subscribed.html.haml
@@ -33,9 +33,10 @@
                 %input{type: "hidden", name: "_method", value: "put"}
                 %input{type: "hidden", name: "ref", value: r.ref.osis}
                 %input{type: "hidden", name: "completed", value: (!r.completed?).to_s}
-                %input{type: "hidden", name: "day_target", value: @day.to_s}
-                - if i != 0
-                  %input{type: "hidden", name: "content_target", value: i}
+                - if @day != @subscription.current_day
+                  %input{type: "hidden", name: "day_target", value: @day.to_s}
+                - if @content_page != 0
+                  %input{type: "hidden", name: "content_target", value: @content_page}
                 %input{type: "checkbox", onChange: "this.form.submit()", id: "#{i}_box",  checked: r.completed? ? "checked" : nil}
                 %label{for: "#{i}_box"}= r.ref.to_s
       %br
