added a bunch of user stuff

--- a/app/views/bookmarks/index.html.haml
+++ b/app/views/bookmarks/index.html.haml
@@ -3,7 +3,7 @@
 
 
 %article
-  %h1= t('bookmarks.title')
+  %h1= t('my bookmarks')
   - unless @bookmarks.empty?
     .split_pane
       .split_pane_sidebar
@@ -15,31 +15,10 @@
               %a{href: user_bookmarks_path(@user)}= t('all')
           - @labels.each do |l|
             %dd{class: params[:label] == l.label ? "highlighted" : ""}
-              = link_to "#{l.label} (#{l.total})", user_bookmarks_path(@user.id, label: l.label)
+              = link_to "#{l.label} (#{l.total})", user_bookmarks_path(@user, label: l.label)
       .split_pane_content
         %ul.big_list
-          - @bookmarks.each do |b|
-            %li
-              .float_left
-                %p.gutter_bottom_half
-                  %b{class: ("highlight" if b.highlight_color), style: ("background-color: ##{b.highlight_color}" if b.highlight_color)}= b.title
-                  - b.reference_list.each do |r|
-                    %p
-                      %b
-                        %a{href: bible_path(r)}= r
-                      %br
-                      = r.contents[0]
-                - if b.labels
-                  %p.small
-                    - b.labels.split(",").each do |l|
-                      - #TODO: split labels in model
-                      %a{href: "#"}= l
-                      - # TODO: Label link
-              .float_right
-                %p
-                  = link_to('edit', edit_bookmark_path(b.id)) 
-                  = link_to('delete', bookmark_path(b.id), :confirm => 'Are you sure?', :method => :delete) 
-                  = b.created_as_date
+          = render partial: "bookmarks/list_item", collection: @bookmarks, locals: {display: :icon}
         = render "shared/pagination", resource_list: @bookmarks
   - else
     %p= t('bookmarks.not found')
