--- a/app/views/users/following.html.haml
+++ b/app/views/users/following.html.haml
@@ -1,3 +1,2 @@
-%article
-  %h1= t('users.following title')
-  = render "list"
+= render "list"
+= render "shared/pagination", resource_list: @users 
