--- a/app/views/plans/index_subscriptions.html.haml
+++ b/app/views/plans/index_subscriptions.html.haml
@@ -30,19 +30,18 @@
         %li
           %div
             %h4= link_to(plan.name, plan_path(plan))
-            -#TODO: make clean/i18nized way of showing progress (f/u w/ Nathan)
             .progress_wrap
               .progress_counter
-                %b=t("plans.subscription.Current Progress String", day: plan.current_day, total_days: plan.total_days)
+                =t("plans.current progress html", day: plan.current_day, total_days: plan.total_days).html_safe
               .progress_bar_outer
                 .progress_bar{:style => "width:#{plan.progress}%"}
                   &nbsp;
               .progress_bar_cap
                 &nbsp;
               .progress_bar_shadow
-                .progress_percent_complete{:style => "left:#{plan.progress}%"}
-                  %b="#{plan.progress}%"
-                  .small Complete
+                .progress_percent_complete{style: "left:#{plan.progress}%"}
+                  %b= t("percentage display", number: plan.progress)
+                  .small= t("plans.completion status (below percentage)")
     = render "shared/pagination", resource_list: @user.subscriptions
   - else
     %div{class: "none"}= (@user == current_user) ? t("plans.you have no plans") : t("plans.no public plans", username: @user.username)
