--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,9 +1,39 @@
 - @title = t("users.subscribed to plan", plan: @plan.name)
-%h2= @plan.name
-%header
-  %div{style: "clear: both;"}
-  %span.header_icon_check= t("users.reading")
+
+- content_for :sidebar do
+  .widget
+    - if current_user.subscribed_to? @plan
+      = button_to(t('plans.read today'), plan_path(@plan), method: "get" , class: 'action_button_green', style: "width: 300px; height: 40px; margin-bottom: 10px")
+    - else
+      = button_to(t('plans.subscribe to plan'), plan_start_path(@plan), :class => 'action_button_green')
+  
+  .widget
+    %header
+      %span
+        =t("plans.more info")
+    %ul.widget_menu
+      %li    
+        %p
+          %b=t("plans.length field")
+          = @plan.length
+      - if !current_user.subscribed_to? @plan
+        %li
+          = link_to(t("plans.view sample"), @plan)
+      %li
+        = link_to(t("plans.users subscribed", user_count: @plan.users.count), plan_users_path(@plan))
+  .widget
+    %header
+      %span
+        =t("plans.publisher")
+    %ul.widget_menu
+      %li
+        %p= @plan.copyright
+      %li
+        = link_to(t("plans.about publisher"), @plan.publisher_url)
+        -#TODO: view partial for this sidebar plan content
 %article
+  %h2= @plan.name
+  %h5= t("users.reading")
   %ul.big_list
     -@users.each do|user|
       %li.user
