--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -9,26 +9,14 @@
       - content_for :sidebar do
         = render "shared/widget_profile_settings"
         = render "shared/widget_user_badges" unless @user.badges.empty?
-
+    = render(partial: "user_info", locals: {user: @user}) if @selected == :recent_activity
   - else
     - # I'm looking at someone else, show their info and stuff
     - unless content_for?(:sidebar)
       - # Default sidebar
       - content_for :sidebar do
         = render "shared/widget_user_badges" unless @user.badges.empty?
-    %section.top_section
-      %div.clearfix
-        %a{href: "#"}
-          %img.avatar_huge{src: @user.user_avatar_url["px_128x128"]}
-        %div
-          %h1= @user.name || @user.username
-          %ul
-            - if @user.name
-              %li.icon_small_user= @user.username
-            - if @user.location
-              %li.icon_small_location= @user.location
-            - if @user.website
-              %li.icon_small_link= @user.website
+    = render(partial: "user_info", locals: {user: @user})
     = render partial: "user_tabs", locals: {selected: @selected}
   %article
     %h1= t("my #{@selected.to_s}")
