--- a/app/views/users/_user_tabs.html.haml
+++ b/app/views/users/_user_tabs.html.haml
@@ -13,7 +13,7 @@
       %span= t('bookmarks.title')
   %li{class: ("highlighted" if selected == :plans)}
     %a
-      %span= t('plans')
+      %span= t('plans.title')
   %li{class: ("highlighted" if selected == :likes)}
     %a
       %span= t('likes.likes')
