added settings gear style for the three tab buttons

--- a/app/assets/sass/_ui_elements.sass
+++ b/app/assets/sass/_ui_elements.sass
@@ -268,6 +268,15 @@
     background:
       position: center -47px !important
 
+dd .icon_settings 
+  background-repeat: no-repeat
+  background-position: center 7px !important
+  text-indent: -30000px
+  &:active,
+  &:focus,
+  .li_active &
+    background:
+      position: center -42px !important
 //
 // ` Calendar
 //
