--- a/app/views/plans/calendar.html.haml
+++ b/app/views/plans/calendar.html.haml
@@ -7,7 +7,7 @@
     %dd
       = link_to t("plans.day"), plan_path(@subscription)
     %dd.settings
-      = link_to t("plans.settings"), plan_settings_path(@subscription)
+      = link_to t("plans.settings"), plan_settings_path(@subscription), :class => "icon_settings"
     %dd.highlighted
       = link_to t("plans.month")
   %h1{style: "clear: none; width: 600px"}= @subscription.name
