--- a/app/views/plans/index_subscriptions.html.haml
+++ b/app/views/plans/index_subscriptions.html.haml
@@ -22,7 +22,7 @@
         = link_to t("plans.all plans"), plans_path
       %dd.highlighted
         = link_to t("plans.my plans"), user_plans_path(current_user)
-  -#else: is a different veiw
+  -#else: is a different view
       
   - if !@user.subscriptions.empty?
     %ul.big_list
