--- a/app/assets/sass/_form_elements.sass
+++ b/app/assets/sass/_form_elements.sass
@@ -16,10 +16,16 @@ br + textarea
     repeat: no-repeat
     position: right bottom
   border: 1px solid
-  font-size: 35px
-  margin: 0 0 10px
-  padding: 5px 20px
+  font-size: 16px
+  margin: 0 0 10px 70px
+  padding: 10px 20px
+  box-sizing: border-box
+  width: 910px
+  opacity: 0.95
+  z-index: 1000
   text-shadow: #fff 0 1px 0
+  position: fixed
+  cursor: pointer
 
 .flash_error
   background:
